--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/page_control"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        app:layout_constraintBottom_toTopOf="@+id/page_viewer"
+        app:layout_constraintBottom_toTopOf="@+id/page_display"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -20,15 +20,38 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/page_viewer"
+        android:id="@+id/page_display"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="200dp"
         android:orientation="horizontal"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/page_control">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/browser_control"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/page_list"
+        app:layout_constraintEnd_toStartOf="@+id/page_display"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/page_control">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/page_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/page_display"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/browser_control">
 
     </FrameLayout>
 
