--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,25 +9,32 @@
     tools:context=".BrowserActivity">
 
     <FrameLayout
+        android:id="@+id/browser_control"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/page_control"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <FrameLayout
         android:id="@+id/page_control"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/page_display"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/browser_control"/>
 
     <FrameLayout
-        android:id="@+id/page_viewer"
+        android:id="@+id/page_display"
         android:layout_width="0dp"
-        android:layout_height="680dp"
+        android:layout_height="0dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-    </FrameLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/page_control"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
