--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -15,44 +15,37 @@
         app:layout_constraintBottom_toTopOf="@+id/page_display"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </FrameLayout>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <FrameLayout
         android:id="@+id/page_display"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="200dp"
         android:orientation="horizontal"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/page_control">
-
-    </FrameLayout>
+        app:layout_constraintStart_toEndOf="@+id/browser_control"
+        app:layout_constraintTop_toBottomOf="@+id/page_control" />
 
     <FrameLayout
         android:id="@+id/browser_control"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_width="140dp"
+        android:layout_height="40dp"
         app:layout_constraintBottom_toTopOf="@+id/page_list"
         app:layout_constraintEnd_toStartOf="@+id/page_display"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/page_control">
-
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/page_control" />
 
     <FrameLayout
         android:id="@+id/page_list"
-        android:layout_width="0dp"
+        android:layout_width="140dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/page_display"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/browser_control">
-
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/browser_control" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
