Working on PagerViewer, fixed bug with landscape display

--- a/app/src/main/res/layout/fragment_page_list.xml
+++ b/app/src/main/res/layout/fragment_page_list.xml
@@ -6,10 +6,10 @@
     tools:context=".PageListFragment">
 
     <ListView
-        android:id="@+id/pageList"
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-    
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
