--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -6,7 +6,7 @@
     tools:context=".PagerFragment">
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/pagerViewer"
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
