--- a/app/src/main/res/layout/fragment_page_list.xml
+++ b/app/src/main/res/layout/fragment_page_list.xml
@@ -8,10 +8,13 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+
+    </ListView>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
 </FrameLayout>
