--- a/app/src/main/res/layout/fragment_browser_control.xml
+++ b/app/src/main/res/layout/fragment_browser_control.xml
@@ -8,8 +8,25 @@
 
     <ImageButton
         android:id="@+id/newPageBtn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="top|end"
         android:contentDescription="@string/newPage"
         android:src="@android:drawable/ic_input_add" />
+
+    <ImageButton
+        android:id="@+id/bookmarkBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|start"
+        android:contentDescription="@string/bookmark"
+        android:src="@android:drawable/btn_star_big_on" />
+
+    <ImageButton
+        android:id="@+id/saveBookMarkBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:contentDescription="@string/saveBookMark"
+        android:src="@android:drawable/ic_menu_save" />
 </FrameLayout>
