Bookmark button opens bookmark fragment on top of page_display container (clicking bookmark opens/closes bookmark fragment, bookmarks save into bookmark fragment listview, deleting bookmarks display alertdialog, clicking bookmarks opens url (but has a bug, need to fix), and need to save bookmarks on activity restart.

--- a/app/src/main/res/layout/fragment_browser_control.xml
+++ b/app/src/main/res/layout/fragment_browser_control.xml
@@ -8,7 +8,7 @@
 
     <ImageButton
         android:id="@+id/newPageBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
         android:contentDescription="@string/newPage"
@@ -16,7 +16,7 @@
 
     <ImageButton
         android:id="@+id/bookmarkBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
         android:contentDescription="@string/bookmark"
@@ -24,9 +24,10 @@
 
     <ImageButton
         android:id="@+id/saveBookMarkBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
         android:contentDescription="@string/saveBookMark"
         android:src="@android:drawable/ic_menu_save" />
+
 </FrameLayout>
