--- a/app/src/main/res/layout/fragment_book_mark_list.xml
+++ b/app/src/main/res/layout/fragment_book_mark_list.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="@string/bookmark"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
