--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -26,25 +26,41 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/browser_control"
-        app:layout_constraintTop_toBottomOf="@+id/page_control" />
+        app:layout_constraintTop_toBottomOf="@+id/page_control">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/book_mark_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="200dp"
+        android:layout_marginBottom="100dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/page_display"
+        app:layout_constraintTop_toBottomOf="@+id/page_control">
+
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/browser_control"
-        android:layout_width="140dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
+        android:layout_marginEnd="590dp"
         app:layout_constraintBottom_toTopOf="@+id/page_list"
-        app:layout_constraintEnd_toStartOf="@+id/page_display"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/page_control" />
 
     <FrameLayout
         android:id="@+id/page_list"
-        android:layout_width="140dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginEnd="590dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/page_display"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/browser_control" />
 
