--- a/app/src/main/res/menu/share_menu.xml
+++ b/app/src/main/res/menu/share_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_camera"
+        android:id="@+id/action_share"
         android:icon="@android:drawable/ic_menu_share"
         android:title="@string/share"
         app:showAsAction="always" />
